# spark-cli

./: .gitattributes  .gitignore  .gitleaksignore  AGENTS.md  CLAUDE.md  PR_BODY.md  README.md  SECURITY.md  SECURITY_ADVISORY_2026-05-23.md  SPARK_COMPETE_CONTRIBUTOR_RESET.md  compete-packet-operator-path-leak.json  patch_timeouts.py  pr_body_updated.md  pyproject.toml  registry.json  spark.toml  tasks.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
bugs/: mission-execution-blocker.md  spawner-build-execution-fails-all-providers.md
compete-reports/: provider-default-bug.md
docs/: ACCESS_LEVEL5_READ_ONLY_ELIMINATION_AUDIT_2026-06-28.md  AGENTIC_REMOTE_SANDBOX_SECURITY_RESEARCH.md  APPROVAL_ENGINE_PLAN_2026-04-26.md  CODE_SCANNING_TRIAGE_2026-05-22.md  FUTURE_INSTALLER_SANDBOX_OPTIONS.md  LAUNCH_RUNBOOK.md  LAUNCH_SECURITY_AUDIT_2026-04-24.md  MODAL_SANDBOX_ARCHITECTURE.md  OPTIONAL_DOCKER_WORKBENCH.md  OWASP_AGENTIC_SECURITY_DEEP_DIVE.md  PRODUCTION_INSTALLER_AUDIT_2026-04-25.md  R30_BUILDER_TRACE_LIFECYCLE_DECISION_2026-06-27.md  R30_DCL_SPAWNER_QA_PLAN_2026-06-28.md  R30_DCL_SPAWNER_READINESS_SPEC_2026-06-28.md  R30_DCL_SPAWNER_RELIABILITY_WORKFLOWS_2026-06-28.md  R30_DCL_SPAWNER_TELEGRAM_CONTINUATION_HANDOFF_2026-06-28.md  R30_DCL_SYSTEM_SOURCE_MAP_2026-06-28.md  R30_DOCUMENTATION_INDEX_2026-06-27.md  R30_DOMAIN_CHIP_LABS_TELEGRAM_CREATOR_PLAN_2026-06-28.md  R30_EVIDENCE_PACKET_2026-06-27.md  R30_GOAL_PROMPT_2026-06-27.md  R30_INSTALLER_BASELINE_DRIFT_AUDIT_2026-06-28.md  R30_INSTALLER_PREP_2026-06-27.md  R30_LOCAL_RUNTIME_ARTIFACTS_HANDOFF_MANIFEST_2026-06-27.json  R30_OWNER_CONVERGENCE_QUEUE_2026-06-28.md  R30_OWNER_HANDOFF_MANIFEST_2026-06-27.json  R30_OWNER_HANDOFF_PACKET_2026-06-27.md  R30_RELEASE_NOTE_DRAFT_2026-06-27.md  R30_RELEASE_PLAN_2026-06-27.md  R30_SHIP_CONVERGENCE_AUDIT_2026-07-01.md  R30_SOURCE_OWNER_AUDIT_2026-06-27.md  R30_STABILITY_DCL_SPAWNER_GOAL_PROMPT_2026-06-28.md  R30_TELEGRAM_LIVE_TRACE_RECAPTURE_2026-06-28.md  R30_VOICE_OWNER_HANDOFF_MANIFEST_2026-06-27.json  R30_VOICE_REGISTRY_DECISION_2026-06-27.md  REMOTE_SANDBOX_IMPLEMENTATION_PLAN.md  REMOTE_SANDBOX_SECURITY_CHECKLIST.md  REUSABLE_CI_WORKFLOWS.md  SAFE_SANDBOX_AGENT_GUIDE.md  SANDBOX_TEST_EVIDENCE_TEMPLATE.md  (+11 more)
schemas/: registry.schema.json  (+1 more)
(+169 files in other folders)
