[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-cli"
version = "0.1.0"
description = "Local Spark installer and operator CLI spike"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "certifi>=2026.5.20",
    "keyring>=25.7.0",
]

[project.optional-dependencies]
browser-use = [
    "browser-use==0.12.8",
    "litellm==1.83.10",
]

[project.scripts]
spark = "spark_cli.cli:main"
spark-local = "spark_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
