[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-cli"
version = "0.1.0"
description = "Local Spark installer and operator CLI spike"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "certifi>=2026.5.20",
    "keyring>=25.7.0",
]

[project.optional-dependencies]
browser-use = [
    "browser-use==0.12.8",
    "litellm==1.82.6",
]

[project.scripts]
spark = "spark_cli.cli:main"
spark-local = "spark_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/spark_cli/cli.py" = ["E501", "I001"]
"src/spark_cli/runtime_policy.py" = ["I001"]
"src/spark_cli/sandbox/access.py" = ["I001"]
"src/spark_cli/sandbox/audit.py" = ["I001"]
"src/spark_cli/sandbox/capabilities.py" = ["I001"]
"src/spark_cli/sandbox/docker.py" = ["I001"]
"src/spark_cli/sandbox/modal.py" = ["I001"]
"src/spark_cli/sandbox/output.py" = ["I001"]
"src/spark_cli/sandbox/paths.py" = ["I001"]
"src/spark_cli/sandbox/ssh.py" = ["E501", "I001"]
"src/spark_cli/security/approval.py" = ["I001"]
"src/spark_cli/security/prompt_injection.py" = ["I001"]
"src/spark_cli/security/url_policy.py" = ["I001"]
"src/spark_cli/system_map.py" = ["I001"]
"tests/test_access.py" = ["I001"]
"tests/test_cli.py" = ["E501", "I001"]
"tests/test_docker_entrypoint.py" = ["I001"]
"tests/test_system_map.py" = ["I001"]
